--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tryghost/content-api": "^1.4.11",
+    "jsdom": "^16.4.0",
     "next": "10.0.3",
     "raw-loader": "^4.0.2",
     "react": "17.0.1",
