--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@tryghost/content-api": "^1.4.11",
     "jsdom": "^16.4.0",
     "next": "10.0.3",
